--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,62 +1,108 @@
-body{
-  margin:0;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 100vh;
-  /* font-family: "Space Mono", monospace; */
-  /* background-image: url('/portal.svg'); */
-  margin: 0;
-  padding: 0;
-
-
-
-}
-.imageContainer{
-  /* position: fixed; */
-/* 
-  width: 100vw;
-  height: 100vh; */
-  /* overflow: hidden;  */
-}
-.teste{
-
-  background-image: url('/portal.svg');
-  background-size: cover;
-  background-position: center;
-  filter: blur(2px);
-  animation: rotateBackground 30s linear infinite; 
-  scale: 10;
-  /* overflow: hidden; */
-  position: absolute;
-  /* z-index: -1; */
-
+@media only screen and (max-width: 600px) {
+  body{
+    margin:0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    height: 100vh;
+    padding: 0;
+    background-image: url('/gifportal2.gif');
+    background-size: cover;
+    background-position: center;
+    backdrop-filter: blur(10px);
+    
+  }
 }
 
- @keyframes rotateBackground {
-  0% {
-      transform: rotate(0deg);
-      scale:10;
+@media only screen and (min-width: 600px) {
+  body{
+    margin:0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    height: 100vh;
+    padding: 0;
+    background-image: url('/gifportal.gif');
+    background-size: cover;
+    background-position: center;
+    backdrop-filter: blur(10px);
+    
   }
-  50% {
-      transform: rotate(360deg); 
-      scale:1.5;
-  }
-  100% {
-      transform: rotate(720deg);
-      scale:10;
-  }
-} 
+}
 
 
+
+
+/* Css do vidro de fundo da tabela */
 .vidro {
-  background: rgba(255, 255, 255, 0.233); /* cor branca com 10% de transparência */
-  backdrop-filter: blur(10px); /* desfoque do plano de fundo */
-  border-radius: 20px; /* bordas arredondadas para um visual mais suave */
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); /* sombra para um efeito de profundidade */
-  backdrop-filter: blur(4px); /* efeito de vidro */
-  border: 1px solid rgba(255, 255, 255, 0.18); /* borda fina para destacar o elemento */
+
+  background: #09d45783; 
+  box-shadow: 0 8px 32px 0 #00ff62; 
+  border: 1px solid rgba(255, 255, 255, 0.18); 
+  border-radius: 20px; 
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 70%;
+
 
 }
+
+/* Configurações do input */
+
+input{
+  height: 45px;
+  background-color:#41b5c9 ;
+  border: 1px solid #203745;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  width: 99%;
+  margin-bottom:10px;
+  border-radius: 10px;
+  text-shadow:
+  1px 1px black, -1px -1px black, 1px -1px black, -1px 1px black;
+}
+
+input::placeholder {
+  color: white;
+  text-shadow:
+  1px 1px black, -1px -1px black, 1px -1px black, -1px 1px black;
+}
+
+input:focus{
+  outline-color: #41b5c9;
+  border:none;
+}
+
+
+
+/* Animação do Rick e Morty */
+
+@keyframes floatingRick {
+  0%, 100% {
+    transform: translateY(-20px) rotate(10deg);
+  }
+
+  50% {
+    transform: translateY(20px) rotate(-10deg);
+  }
+
+}
+
+@keyframes floatingMorty {
+  0%, 100% {
+    transform: translateY(20px) rotate(-10deg);
+  }
+
+  50% {
+    transform: translateY(-20px) rotate(10deg);
+  }
+}
+
+.ghost-animation-rick {
+  animation: floatingRick 4s ease-in-out infinite;
+}
+.ghost-animation-morty {
+  animation: floatingMorty 4s ease-in-out infinite;
+}
+
