--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,8 @@
   body{
     margin:0;
     overflow-x: hidden;
-    overflow-y: hidden;
-    height: 100vh;
+    /* overflow-y: hidden; */
+    height: 120vh;
     padding: 0;
     background-image: url('/gifportal2.gif');
     background-size: cover;
@@ -17,8 +17,8 @@
   body{
     margin:0;
     overflow-x: hidden;
-    overflow-y: hidden;
-    height: 100vh;
+    /* overflow-y: hidden; */
+    height: 120vh;
     padding: 0;
     background-image: url('/gifportal.gif');
     background-size: cover;
